# fork_nde

./: .gitignore  Adams_Bashforth  Adams_Moulton  BDFs  Factory.cpp  Factory.h  Info.cpp  Info.h  Initial1  Initial2  Input  Makefile  README.en.md  README.md  cal.h  doc.tex  main.cpp  test  test.cpp  test2.cpp
Inputdata/: Input_test  test  test1  test2_1  test2_2  test2_3  test2_3~  test2_4~  test3_1  test3_1~  test3_2  test3_3  test3_3~  test3_4  test3_4~  test3_5  test3_5~  test4  test4~  test_all_11  test_all_13  test_all_14  test_all_2  test_all_3  test_all_6
Newproject2/: CMakeLists.txt  README.md
Newproject2/report/: Makefile  design_document.tex  doc.tex  report.tex
Newproject2/src/: CMakeLists.txt
Newproject2/src/Core/: CMakeLists.txt  Curve.cpp  Curve.h  Tensor.h
Newproject2/src/IrregularGrid/: CMakeLists.txt  IrBottomSolver.h  IrFuncFiller.h  IrGhostFiller.h  IrInterpolation.h  IrMGFactory.h  IrMultigrid.h  IrPossionOP.h  IrRectDomain.h  IrRestriction.h  IrTestMultigrid.h  PLG.h  PossionStencil.h  QRHelper.h
Newproject2/src/Multigrid/: CMakeLists.txt  Interpolator.h  Laplacian.h  MGFactory.h  MultigridSolver.h  PossionDirectSolver.h  Restrictor.h  Smoother.h  TestMultigrid.h  WeightedJacobi.h
Newproject2/src/RegularGrid/: CMakeLists.txt  FuncFiller.h  GhostFiller.h  RectDomain.h  ScalarFunction.h
Newproject2/test/: CMakeLists.txt  Input0.json  Input1.json  Input10.json  Input11.json  Input12.json  Input14.json  Input15.json  Input16.json  Input2.json  Input3.json  Input4.json  Input6.json  Input7.json  Input8.json  Input9.json  Test1DMG.cpp  Test2DMG.cpp  TestIR.cpp  TestMG.cpp  TestMpiFill.cpp
Pictures/: 1_1.eps  1_2.eps  2_1_1.eps  2_1_4.eps  2_2_2.eps  2_3_2.eps  2_4_1.eps  3_11.eps  3_14.eps  3_23.eps  3_31.eps  3_33.eps  3_34.eps  3_4.eps
assignment1/: doc.tex
assignment1/Picture/: CN0.5_1.eps  CN0.5_10.eps  CN0.5_2.eps  CN1_1.eps  CN1_10.eps  CN1_2.eps  FI_1.eps  FI_10.eps  FI_2.eps  TSC_1.eps  TSC_10.eps  TSC_2.eps  exact0.eps  exact1.eps  exact10.eps  exact2.eps  origin.eps
project1/: Adams_Moulton  Info.cpp  Info.h  Initial2  Input  cal.h
project1/Inputdata/: test2_1  test2_2  test2_4  test3_1  test3_2~  test3_4  test_all_1  test_all_10  test_all_12  test_all_4  test_all_5  (+3 more)
project2/: Factory.h  Makefile  Multigrid.h  answers.tex  data  design.tex  main.cpp  math.tex  test.cpp  test2.cpp
(+115 files in other folders)
